--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up - LUSH Scents</title>
+    <title>Sign Up - LaxeLane</title>
     <style>
         * {
             margin: 0;
@@ -160,7 +160,7 @@
 <body>
     <div class="signup-container">
         <div class="site-logo">
-            <a href="index.html" class="js-logo-clone">LUXE LANE</a>
+            <a href="index.html" class="js-logo-clone">LaxeLane</a>
         </div>
 
         <form id="signform" method="post" action="/signup" novalidate >
@@ -199,7 +199,7 @@
 
             <div class="divider">or</div>
 
-            <button type="button" class="google-btn">
+            <a href="/auth/google" class="google-btn">
                 <svg width="18" height="18" viewBox="0 0 18 18">
                     <path d="M17.64 9.2c0-.637-.057-1.251-.164-1.84H9v3.481h4.844c-.209 1.125-.843 2.078-1.796 2.717v2.258h2.908c1.702-1.567 2.684-3.874 2.684-6.615z" fill="#4285f4"/>
                     <path d="M9 18c2.43 0 4.467-.806 5.956-2.184l-2.908-2.258c-.806.54-1.837.86-3.048.86-2.344 0-4.328-1.584-5.036-3.711H.957v2.332C2.438 15.983 5.482 18 9 18z" fill="#34a853"/>
@@ -207,7 +207,7 @@
                     <path d="M9 3.58c1.321 0 2.508.454 3.44 1.345l2.582-2.58C13.463.891 11.426 0 9 0 5.482 0 2.438 2.017.957 4.961L3.964 7.293C4.672 5.166 6.656 3.58 9 3.58z" fill="#ea4335"/>
                 </svg>
                 Sign up with Google
-            </button>
+            </a>
 
             <div class="login-link">
                 Already registered? <a href="login.html">Login</a>
