--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -327,7 +327,7 @@
         if(amount){
             try {
                const response = await fetch("/admin/addCategoryOffer",{
-                method:"POST",
+                method:"delete",
                 headers:{
                     'content-type':"application/json",
                 },
