--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -149,6 +149,13 @@ body {
                     </a>
                 </li>
             
+                <li class="menu-item">
+                    <a class="menu-link" href="/admin/orders">
+                        <i class="material-icons">shopping_bag</i>
+                        <span class="text">Orders</span>
+                    </a>
+                </li>
+                
                 <!-- <li class="menu-item">
                     <a class="menu-link" href="/admin/coupon"> <i class="icon material-icons md-class"></i>
                         <span class="text">Coupon</span> </a>
