--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -21,19 +21,29 @@
     <meta name="msapplication-TileColor" content="#cc9966">
     <meta name="msapplication-config" content="assets/images/icons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="assets/vendor/line-awesome/line-awesome/line-awesome/css/line-awesome.min.css">
+    <!-- <link rel="stylesheet" href="assets/vendor/line-awesome/line-awesome/line-awesome/css/line-awesome.min.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/plugins/owl-carousel/owl.carousel.css">
     <link rel="stylesheet" href="assets/css/plugins/magnific-popup/magnific-popup.css">
+    
     <link rel="stylesheet" href="assets/css/plugins/jquery.countdown.css">
   
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/skins/skin-demo-6.css">
     <link rel="stylesheet" href="assets/css/demos/demo-6.css">
 
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css" rel="stylesheet"/>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
     <script src="https://kit.fontawesome.com/fd184af5ec.js" crossorigin="anonymous"></script>
+
+    <!-- Plugins CSS File -->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <!-- Main CSS File -->
+    <link rel="stylesheet" href="assets/css/style.css">
 
 
     <style>
@@ -85,16 +95,17 @@
                 <div class="container">
                     <div class="header-left">
                         <div class="header-search header-search-extended header-search-visible d-none d-lg-block">
-                            <a href="#" class="search-toggle" role="button"><i class="icon-search"></i></a>
-                            <form action="#" method="get">
-                                <div class="header-search-wrapper search-wrapper-wide">
-                                    <label for="q" class="sr-only">Search</label>
-                                    <button class="btn btn-primary" type="submit"><i class="icon-search"></i></button>
-                                    <input type="search" class="form-control" name="q" id="q" placeholder="Search product ..." required>
-                                </div>
-                            </form>
+                          <form action="/search" method="GET">
+                            <div class="header-search-wrapper search-wrapper-wide">
+                              <label for="q" class="sr-only">Search</label>
+                              <button class="btn btn-primary" type="submit"><i class="icon-search"></i></button>
+                              <input type="search" class="form-control" name="q" id="q" placeholder="Search product ..." required>
+                            </div>
+                          </form>
                         </div>
-                    </div>
+                      </div>
+                      
+
                     <div class="header-center">
                         <img src="/assets/images/logo.png" alt="logo"  style="width: 150px;">
 
@@ -115,9 +126,9 @@
                                 <span id="cart" class="cart-count"></span>
                             </a>
 
-                            <div class="dropdown-menu dropdown-menu-right">
+                            <!-- <div class="dropdown-menu dropdown-menu-right">
                                
-                            </div>
+                            </div> -->
                         </div>
                     
                        
@@ -153,55 +164,23 @@
 
     
                                 </li>
-                                <li>
-                                    <a href="product.html" class="sf-with-ul">Category</a>
-
-                                  
-                                </li>
-                                <li>
-                                    <a href="#" class="sf-with-ul">About</a>
-
-                                </li>
-                                <li>
-                                    <a href="blog.html" class="sf-with-ul">Contacts</a>
-
-                                    <ul>
-                                        <li><a href="blog.html">Classic</a></li>
-                                        <li><a href="blog-listing.html">Listing</a></li>
-                                        <li>
-                                            <a href="#">Grid</a>
-                                            <ul>
-                                                <li><a href="blog-grid-2cols.html">Grid 2 columns</a></li>
-                                                <li><a href="blog-grid-3cols.html">Grid 3 columns</a></li>
-                                                <li><a href="blog-grid-4cols.html">Grid 4 columns</a></li>
-                                                <li><a href="blog-grid-sidebar.html">Grid sidebar</a></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a href="#">Masonry</a>
-                                            <ul>
-                                                <li><a href="blog-masonry-2cols.html">Masonry 2 columns</a></li>
-                                                <li><a href="blog-masonry-3cols.html">Masonry 3 columns</a></li>
-                                                <li><a href="blog-masonry-4cols.html">Masonry 4 columns</a></li>
-                                                <li><a href="blog-masonry-sidebar.html">Masonry sidebar</a></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a href="#">Mask</a>
-                                            <ul>
-                                                <li><a href="blog-mask-grid.html">Blog mask grid</a></li>
-                                                <li><a href="blog-mask-masonry.html">Blog mask masonry</a></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a href="#">Single Post</a>
-                                            <ul>
-                                                <li><a href="single.html">Default with sidebar</a></li>
-                                                <li><a href="single-fullwidth.html">Fullwidth no sidebar</a></li>
-                                                <li><a href="single-fullwidth-sidebar.html">Fullwidth with sidebar</a></li>
-                                            </ul>
-                                        </li>
+                                <li class="menu-item-has-children">
+                                    <a href="/shop" class="sf-with-ul">Category ▾</a>
+                                    <ul class="sub-menu">
+                                      <li><a href="/shop?category=men">Men</a></li>
+                                      <li><a href="/shop?category=women">Women</a></li>
+                                      <li><a href="/shop?category=kids">Kids</a></li>
                                     </ul>
+                                  </li>
+                                  
+                                <li>
+                                    <a href="about.html" class="sf-with-ul">About</a>
+
+                                </li>
+                                <li>
+                                    <a href="contact.html" class="sf-with-ul">Contacts</a>
+
+                                   
                                 </li>
 
                             </ul><!-- End .menu -->
