--- a/views/user/forgot-password.ejs
+++ b/views/user/forgot-password.ejs
@@ -43,8 +43,11 @@
     }
 
     .site-logo {
-        text-align: center;
-        margin-bottom: 25px;
+        display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 15px;
     }
 
     .site-logo img {
